def/force-app/main/default/objects/Stocks__c/Stocks__c.object-meta.xml
<CustomObject>
    <label>Stocks</label>
    <nameField>
        <label>Stocks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stockss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>