def/force-app/main/default/objects/Stocks__c/fields/Dailygainer__c.field-meta.xml
<CustomField>
    <fullName>Dailygainer__c</fullName>
    <label>Dailygainer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>