def/force-app/main/default/objects/Stocks__c/fields/Monthlygain__c.field-meta.xml
<CustomField>
    <fullName>Monthlygain__c</fullName>
    <label>Monthlygain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>