def/force-app/main/default/objects/Stocks__c/fields/Nameofstock__c.field-meta.xml
<CustomField>
    <fullName>Nameofstock__c</fullName>
    <externalId>true</externalId>
    <label>Nameofstock</label>
    <length>30</length>
    <type>Text</type>
</CustomField>