def/force-app/main/default/objects/Stocks__c/fields/Weeklygain__c.field-meta.xml
<CustomField>
    <fullName>Weeklygain__c</fullName>
    <label>Weeklygain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>