def/force-app/main/default/objects/Stocks__c/fields/Yearlygain__c.field-meta.xml
<CustomField>
    <fullName>Yearlygain__c</fullName>
    <label>Yearlygain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>