def/force-app/main/default/objects/Stocks__c/listViews/listofstocks.listView-meta.xml
<ListView>
    <fullName>listofstocks</fullName>
    <columns>Nameofstock__c</columns>
    <columns>Dailygainer__c</columns>
    <columns>Weeklygain__c</columns>
    <columns>Monthlygain__c</columns>
    <columns>Yearlygain__c</columns>
    <filterScope>Everything</filterScope>
    <label>listofstocks</label>
</ListView>